examples/nameresolution/Trait.an
ability Foo a b =
    foo: fn a -> b
    bar: a

// error: missing definition of bar
implicit foo_i32_string: Foo I32 String =
    Foo (fn _x -> "test") 2

main () =
    foo 3
    bar : Unit

// args: -e ast-r --no-color
// expected stdout:
// // id = c1m488_1237
// type Foo_c1m488_1237_0 a_1 b_2 [env]_8 =
//     foo_c1m488_1237_3: fn a_1 [[env]_8] -> b_2
//     bar_c1m488_1237_6: a_1
// 
// // id = c1m488_400
// implicit foo_i32_string_c1m488_400_1: Foo_c1m488_1237_0 I32 String_c0m703_9662_0 =
//     Foo_c1m488_1237_0 (fn _x_3 -> "test") 2
// 
// // id = c1m488_1944
// main_c1m488_1944_0 () =
//     foo_c1m488_1237_3 3
//     bar_c1m488_1237_6: Unit_bUnit

